# corp-data-api

./: .gitignore  .prod.env  Cargo.toml  README.md  commands.txt  compose.yml
migrations/: 20251217075556_create_offices_table.sql  20251217132823_create_employees_table.sql
src/: lib.rs  main.rs
src/config/: db_settings.rs  mod.rs
src/controller/: employee_controller.rs  mod.rs  office_controller.rs
src/domain/: employee.rs  office.rs
src/dto/: employee_dto.rs  mod.rs  office_dto.rs
src/entity/: employee.rs  mod.rs  office.rs
src/repository/: employee_repository.rs  mod.rs  office_repository.rs
src/service/: employee_service.rs  mod.rs  office_service.rs
src/utils/: mod.rs
tests/: endpoint_test.rs  repo_tests.rs  service_tests.rs  utils.rs
