[package]
name = "corp-data-api"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }